--- a/src/style.css
+++ b/src/style.css
@@ -22,12 +22,12 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+html, body, #app {
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  padding: 0;
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
 }
 
 h1 {
@@ -58,12 +58,6 @@ button:focus-visible {
   padding: 2em;
 }
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
 
 @media (prefers-color-scheme: light) {
   :root {
